[gd_scene load_steps=10 format=3 uid="uid://dlgusv58q1ygb"]

[ext_resource type="Script" path="res://Scripts/ProjectItem.gd" id="1_07wqs"]
[ext_resource type="Texture2D" uid="uid://85arwkwvu7x3" path="res://Assets/Basic Icons/ellipsis-vertical-solid.svg" id="2_gr2cv"]
[ext_resource type="Texture2D" uid="uid://cc0sndolj080q" path="res://Assets/Splash Screen/Default_logo_for_a_DD_world_building_app_0_a8c7ff09-1ff9-4d30-9db9-1eaac59c2815_0_BNW.png" id="2_leuk8"]
[ext_resource type="Texture2D" uid="uid://dg2spcde7cxgw" path="res://Assets/Ruleset Logos/PF2Logo1600.webp" id="4_dot2i"]
[ext_resource type="Texture2D" uid="uid://ck2uu7o2kbglh" path="res://Assets/Ruleset Logos/DnD-Symbol.png" id="4_hvyuj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bk1fu"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.0509804, 0.0666667, 0.0901961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x22ej"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.0509804, 0.0666667, 0.0901961, 1)
corner_radius_bottom_right = 8
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eydt3"]
draw_center = false
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.160784, 0.168627, 0.184314, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nypv"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0823529, 0.368627, 0.945098, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Button" type="Button"]
custom_minimum_size = Vector2(150, 205)
offset_right = 150.0
offset_bottom = 200.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_bk1fu")
theme_override_styles/hover = SubResource("StyleBoxFlat_bk1fu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bk1fu")
theme_override_styles/focus = SubResource("StyleBoxFlat_bk1fu")
script = ExtResource("1_07wqs")
metadata/flex_metas = {
"grow": 0.0
}

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.478431)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -78.5
offset_right = 54.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_leuk8")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ProjectThumbnail" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.678431)
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="ProjectName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "World Name"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="ProjectModDate" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "00/00/00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = 24.0
grow_horizontal = 0
texture_normal = ExtResource("2_gr2cv")
ignore_texture_size = true
stretch_mode = 5

[node name="DnDLogo" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 49.0
offset_bottom = 26.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x22ej")

[node name="DnDLogo" type="TextureRect" parent="DnDLogo"]
layout_mode = 0
offset_left = 8.0
offset_top = -4.0
offset_right = 41.0
offset_bottom = 29.0
texture = ExtResource("4_hvyuj")
expand_mode = 1
stretch_mode = 5

[node name="PathfinderLogo" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 101.0
offset_bottom = 26.0
theme_override_styles/panel = SubResource("StyleBoxFlat_x22ej")

[node name="PathfinderLogo" type="TextureRect" parent="PathfinderLogo"]
layout_mode = 0
offset_left = 8.0
offset_top = -3.0
offset_right = 92.0
offset_bottom = 28.0
texture = ExtResource("4_dot2i")
expand_mode = 1
stretch_mode = 5

[node name="Panel3" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eydt3")

[node name="Panel4" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2nypv")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
